--- a/gymHouse/entrenamiento/templates/admin_entrenar-historial.html
+++ b/gymHouse/entrenamiento/templates/admin_entrenar-historial.html
@@ -5,24 +5,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="header" content="" />
         <link rel="stylesheet" href="assets/styles_menu.css" />
+        <link rel="stylesheet" href="assets/styles_menu-celu.css">
         <link rel="stylesheet" href="assets/styles_ejercicios.css" />
         <link rel="stylesheet" href="assets/styles_admin_entrenar-historial.css" />
         <title>Admin: Entrenar - historial</title>
     
     </head>
     <body>
-
-        <input type="checkbox" class="checkbox" id="menu-toogle"/>
-        <label for="menu-toogle" class="menu-toogle"><img src="assets/images/menu.png"></label>
-
         <nav class="menu">
             <div class="menu_icons">
                 <ul> <!-- poner los links correctos -->
                     <li>
-                        <a href="#"> <img class="logo" src="assets/images/logo.png"> </a> 
+                        <a href="index_admin.html">
+                            <img class="logo" src="assets/images/logo.png">
+                        </a> 
                     </li> 
                     <li>
-                        <a href="#"> <img src="assets/images/user.png"> <p>Cuenta</p> </a>
+                        <a class="show-profile" id="show-profile">
+                            <img src="assets/images/user.png">
+                            <p>Perfil</p>
+                        </a>
                     </li> 
                     <li> 
                         <a href="admin_entrenar.html">
@@ -31,20 +33,76 @@
                         </a> 
                     </li>
                     <li>
-                        <a href="admin_noticias-crear.html"><!--cambiar el link-->
+                        <a href="admin_noticias.html">
                             <img src="assets/images/edit.png">
                             <p>Noticias</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#"> <img src="assets/images/calendar.png"> <p>Turnos</p> </a>
+                        <a href="admin_turnos.html">
+                            <img src="assets/images/calendar.png">
+                            <p>Turnos</p>
+                        </a>
                     </li>
                     <li>
-                        <a href="#"> <img src="assets/images/users-alt.png"> <p>Alumnos</p> </a>
+                        <a href="admin_alumnos.html">
+                            <img src="assets/images/users-alt.png">
+                            <p>Alumnos</p>
+                        </a>
                     </li>
                 </ul>
             </div>
         </nav>
+        <div class="navigation" id="navigation">
+            <ul>
+                <li class="list">
+                    <a href="index_admin.html">
+                        <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                        <span class="text">Inicio</span>
+                    </a>
+                </li>
+                <li class="list active">
+                    <a href="admin_perfil.html">
+                        <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
+                        <span class="text">Perfil</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="admin_entrenar.html">
+                        <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
+                        <span class="text">Entrenar</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="admin_noticias.html">
+                        <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
+                        <span class="text">Noticias</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="admin_turnos.html">
+                        <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                        <span class="text">Turnos</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="admin_alumnos.html">
+                        <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                        <span class="text">Alumnos</span>
+                    </a>
+                </li>
+                <div class="indicator"></div>
+            </ul>
+        </div>
+        <div class="navigation--space" id="navigation--space"></div>
+    
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+        <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+        <!-- <script> document.getElementById("eprofile").style.display='none'; </script> -->
+
+        <!-- fin de los menú -->
 
         <!-- aca empieza -->
         <div class="historialrutinas">
@@ -199,7 +257,7 @@
 
 
         </div>
-
+        <div class="relleno"></div>
 
     </body>
 </html>
