--- a/gymHouse/posts/templates/admin_noticias-crear.html
+++ b/gymHouse/posts/templates/admin_noticias-crear.html
@@ -6,71 +6,89 @@
         <meta name="header" content="" />
         <link rel="stylesheet" href="assets/styles_menu.css" />
         <link rel="stylesheet" href="assets/styles_menu-celu.css">
+        <link rel="stylesheet" href="assets/styles_admin_noticias-noticia.css">
         <link rel="stylesheet" href="assets/styles_admin_noticias-crear.css" />
         <title>Admin: Noticias - crear noticia</title>
     
     </head>
     <body>
-        <div class="wrapper_menu">
-            <nav class="menu">
-                <div class="menu_icons">
-                    <ul> <!-- poner los links correctos -->
-                        <li>
-                            <a href="#"> <img class="logo" src="assets/images/logo.png"> </a> 
-                        </li> 
-                        <li>
-                            <a href="#"> <img src="assets/images/user.png"> <p>Cuenta</p> </a>
-                        </li> 
-                        <li> 
-                            <a href="admin_entrenar.html">
-                                <img src="assets/images/gym/gym.png">
-                                <p>Entrenar</p>
-                            </a> 
-                        </li>
-                        <li>
-                            <a href="#"> <img src="assets/images/edit.png"> <p>Noticias</p> </a>
-                        </li>
-                        <li>
-                            <a href="#"> <img src="assets/images/calendar.png"> <p>Turnos</p> </a>
-                        </li>
-                        <li>
-                            <a href="#"> <img src="assets/images/users-alt.png"> <p>Alumnos</p> </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <aside class="container_nav"></aside>
-        </div>
+        <nav class="menu">
+            <div class="menu_icons">
+                <ul> <!-- poner los links correctos -->
+                    <li>
+                        <a href="index_admin.html">
+                            <img class="logo" src="assets/images/logo.png">
+                        </a> 
+                    </li> 
+                    <li>
+                        <a href="admin_perfil.html">
+                            <img src="assets/images/user.png">
+                            <p>Perfil</p>
+                        </a>
+                    </li> 
+                    <li> 
+                        <a href="admin_entrenar.html">
+                            <img src="assets/images/gym/gym.png">
+                            <p>Entrenar</p>
+                        </a> 
+                    </li>
+                    <li>
+                        <a href="admin_noticias.html">
+                            <img src="assets/images/edit.png">
+                            <p>Noticias</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="admin_turnos.html">
+                            <img src="assets/images/calendar.png">
+                            <p>Turnos</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="admin_alumnos.html">
+                            <img src="assets/images/users-alt.png">
+                            <p>Alumnos</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <div class="navigation" id="navigation">
             <ul>
                 <li class="list">
-                    <a href="index_alumnos.html">
+                    <a href="index_admin.html">
                         <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
                         <span class="text">Inicio</span>
                     </a>
                 </li>
                 <li class="list active">
-                    <a href="alumnos_perfil.html">
+                    <a href="admin_perfil.html">
                         <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
                         <span class="text">Perfil</span>
                     </a>
                 </li>
                 <li class="list">
-                    <a href="alumnos_entrenar.html">
+                    <a href="admin_entrenar.html">
                         <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
                         <span class="text">Entrenar</span>
                     </a>
                 </li>
                 <li class="list">
-                    <a href="alumnos_noticias.html">
+                    <a href="admin_noticias.html">
                         <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
                         <span class="text">Noticias</span>
                     </a>
                 </li>
                 <li class="list">
-                    <a href="alumnos_turnos.html">
+                    <a href="admin_turnos.html">
                         <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
                         <span class="text">Turnos</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="admin_alumnos.html">
+                        <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                        <span class="text">Alumnos</span>
                     </a>
                 </li>
                 <div class="indicator"></div>
@@ -82,18 +100,18 @@
         <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-        <script> document.getElementById("eprofile").style.display='none'; </script>
-        
+        <!-- <script> document.getElementById("eprofile").style.display='none'; </script> -->
+    
         <!-- fin del menú -->
 
         <div class="wrapper_noticias">
             <div class="noticias-crearnoticia">
                 
-                <a class="turnback" src=""><!--agregar link-->
+                <a class="turnback" href="admin_noticias.html">
                     <img src="assets/images/turn-back.png">
                 </a>
     
-                <form action="" class="crearnoticia">
+                <form action="" class="noticia">
                     <div class="imagen">
                         <div class="imagen-subir">
                             <label for="myfile"><p>insertar imagen</p></label>
@@ -126,13 +144,6 @@
                                 <img src="assets/images/text format/numeral list.png">
                             </button>
                         </div>
-                        <!-- <div class="formato-color">
-                            <button id="rosa"></button>
-                            <button id="amarillo"></button>
-                            <button id="azul"></button>
-                            <button id="verde"></button>
-                            <button id="naranja"></button>
-                        </div> -->
                     </div>
                 </form>
                 
@@ -146,7 +157,7 @@
                 </button>
             </div>
         </div>
-
+        <div class="espaciofinal"></div>
 
     </body>
 </html>
