--- a/gymHouse/static/css/styles_admin_entrenar.css
+++ b/gymHouse/static/css/styles_admin_entrenar.css
@@ -88,8 +88,6 @@ body {
     margin: auto 2% auto auto;
 }
 
-
-
 .plegable{
     height: 0px;
     display:none;
@@ -119,7 +117,117 @@ div.plegable.desplegado > .ejercicio{
     margin: 2rem 1rem 1rem 0;
 }
 
-/* botones de agregar ejercicio e historial */
+.screen-ejercicio{
+    width: 40%;
+    height: fit-content;
+    margin: 0 2rem;
+    padding-top: 3rem;
+    border-radius: 18px;
+    background: #BACCFF;
+}
+.fecha{
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+}
+.fecha input{
+    width: 80%;
+    margin: auto auto 2rem;
+}
+.form_ejercicios input{
+    width: fit-content;
+    height: fit-content;
+    border-radius: 14px;
+    border: none;
+    background-color: #5135FF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display:flex;
+    justify-content: center;
+    margin: 1rem auto;
+    padding: 1rem 3rem;
+    cursor: pointer;
+    transition: all .5s ease;
+    font-family: "raleway bold";
+    color: white;
+    font-size: 1.6rem;
+}
+.fecha h1{
+    margin: auto auto 1rem;
+    font-family: "raleway bold";
+    font-size: 2rem;
+
+}
+.screen-ejercicio > .ejercicio{
+    width: 90%;
+    min-width: 8rem;
+    max-width: 90%;
+    margin: 0 auto 3%;
+    background: #282828;
+}
+.screen-ejercicio > .ejercicio-pasos{
+    width: auto;
+    margin: auto;
+    padding: 1.6rem 2rem;
+    background: #D6E1FF;
+}
+.ejercicio-pasos > form{
+    height: fit-content;
+    width: 100%; 
+}
+.ejercicio > input
+{
+    position: absolute;
+    z-index: 2;
+    opacity: 1;
+}
+.ejercicio-pasos > form > div > .ejercicios__wrapper
+{
+    display: flex;
+    flex-wrap: wrap;
+}
+.ejercicio-pasos > form > div > .ejercicios__wrapper > .ejercicio.none
+{
+    display: none;
+}
+/* .clicked{
+    pointer-events: none;
+} */
+.ejercicio__buttonQuitar{
+    display: none;
+    position: absolute;
+    width: fit-content;
+    right: -.7rem;
+    top: -.8rem;
+    z-index: 5;
+    border-radius: 30%;
+    border-color: transparent;
+    background-color: rgb(239, 35, 35);
+    font-size: 2rem;
+    line-height: 1.5rem;
+    color: white;
+    cursor: pointer;
+}
+.ejercicio-pasos > form > div .ejercicio__buttonQuitar{
+    display: block;
+}
+.ejercicio-pasos > form > div > h2
+{
+    width: 100%;
+}
+
+.screen-ejercicio > .ejercicio-pasos p{
+    font-family:"raleway medium";
+    font-size: 1.4rem;
+}
+.ejercicio-video{
+    margin: 2rem;
+}
+.ejercicio-video img{
+    width: 100%;
+    margin: auto
+}
+
 
 .entrenar-botones{
     width: 100%;
@@ -132,6 +240,7 @@ div.plegable.desplegado > .ejercicio{
 .botones{
     display: flex;
     justify-content: space-between;
+    flex-direction: row;
     margin: auto;
 }
 .botones button{
@@ -157,51 +266,24 @@ div.plegable.desplegado > .ejercicio{
     color: white;
     text-decoration: none;
 }
-
-/* div de creación de la rutina */
-
-.screen-ejercicio{
-    display: none;
-    width: 40%;
+.botones input{
+    color: white;
+    text-decoration: none;
+    width: fit-content;
     height: fit-content;
-    margin: 0 2rem;
-    padding-top: 3rem;
-
-    border-radius: 18px;
-    background: #BACCFF;
-    border: dotted 1px black;
+    border-radius: 14px;
+    border-color: transparent;
+    background-color: #5135FF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display:flex;
+    justify-content: center;
+    margin: auto 0;
+    padding: 1rem 3rem;
+    cursor: pointer;
+    transition: all .5s ease;
+    font-family: "raleway semibold";
+    font-size: 1.5rem;
 }
-.screen-ejercicio > .ejercicio{
-    width: 90%;
-    min-width: 8rem;
-    max-width: 90%;
-    margin: 0 auto 3%;
-    background: #282828;
-}
-.screen-ejercicio > .ejercicio-pasos{
-    width: auto;
-    margin: auto;
-    padding: 1.6rem 2rem;
-    background: #D6E1FF;
-}
-.ejercicio-pasos > form{
-    height: 20rem;
-    width: 100%; 
-}
-
-.screen-ejercicio > .ejercicio-pasos p{
-    font-family:"raleway medium";
-    font-size: 1.4rem;
-}
-.ejercicio-video{
-    margin: 2rem;
-}
-.ejercicio-video img{
-    width: 100%;
-    margin: auto
-}
-
-
 /*--------------------------------*/
 @media (max-width: 1100px) {}
 @media (max-width: 700px) {
