--- a/gymHouse/static/css/styles_ejercicios.css
+++ b/gymHouse/static/css/styles_ejercicios.css
@@ -39,6 +39,7 @@ body {
     border-radius:6px;
     display: flex;
     flex-flow: column;
+    position: relative;
 }
 .imgejercicio{
     width: fit-content;
