--- a/gymHouse/static/css/styles_menu.css
+++ b/gymHouse/static/css/styles_menu.css
@@ -27,7 +27,6 @@ body {
     padding: 0;
     background: #fafafa; 
     font-size: 1em;
-    /* display: flex; */
     line-height: 1.5em;
 }
 /* fin de FONTS */
@@ -46,10 +45,6 @@ body {
     position: fixed;
     display: block;
     z-index: 100;
-}
-.container_nav{
-    width: 6vw;
-    height: 100%;
 }
 .menu_icons{
     height: 100%;
@@ -105,6 +100,25 @@ body {
 }
 
 /* MENU VERSION CELULAR ------------------------------------------------------------ */
+.menu-toogle {
+    width: 40px;
+    position:absolute; 
+    text-align:center;
+    top: 7px; 
+    right: 8px;
+    transition: all .5s ease; 
+    z-index:10;
+    display:none; 
+}
+.menu-toogle img{
+    height: 40px;
+    width: 40x;
+}
+.checkbox {
+    display:none; 
+}
+
+/*-------------------------------------------------------*/
 @media (max-width: 1100px) {
     .menu_icons img{
         height: 2rem;
@@ -134,20 +148,46 @@ body {
     }
 }
 @media (max-width: 700px) {
-    .container_nav{
-        display: none;
-        width: 0px;
-    }
     .menu{
-        display: none;
-        width: 0px;
+        height: 100%;
+        width: 9rem;
+        left: unset;
+        right: -25%;
     }
-    /* .menu_icons{
-        display: none;
-    } */
-    .aside--space{
-        display: none;
-        width: 0px;
+    .menu_icons img{
+        height: 2.8rem;
+        width: 2.8rem;
+    }
+    .menu_icons p{
+        font-size: 1.6rem;
+    }
+    .menu_icons > ul > li > a > .logo{
+        height: 4rem;
+        width: 5.8rem;
+    }
+    .menu_icons{
+        display: block;
+        width: 96%;
+        margin: 0 auto;
+        line-height: 2;
+        position: relative;
+    }
+    .menu-toogle {
+        display: block; 
+    }
+    .menu-toogle::before {
+        display: block; 
+    }
+    .checkbox:checked ~ .menu {
+        right: 0px; 
+        position: fixed;
+    }
+    .checkbox:checked ~ .main-w {
+        margin-left: 20px; 
+    }
+    .checkbox:checked ~ .menu-toogle { 
+        right: 100px;
+        position: fixed; 
     }
 }
 /*-------------------------------------------------------*/
