--- a/gymHouse/templates/index_admin_ailin.html
+++ b/gymHouse/templates/index_admin_ailin.html
@@ -1,12 +1,13 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="header" content="" />       
-        <link rel="stylesheet" href="assets/styles_menu.css" />
-        <link rel="stylesheet" href="assets/styles_menu-celu.css" />
-        <link rel="stylesheet" href="assets/styles_admin_landing.css" />
+        <link rel="stylesheet" href="{% static 'css/styles_menu.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/styles_menu-celu.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/styles_admin_landing.css' %}" />
         <title>Gym House: Admin</title>
     
     </head>
@@ -15,37 +16,37 @@
             <div class="menu_icons">
                 <ul> <!-- poner los links correctos -->
                     <li>
-                        <a href="index_admin.html">
-                            <img class="logo" src="assets/images/logo.png">
+                        <a href="{% url 'login_profe' %}">
+                            <img class="logo" src="{% static 'images/logo.png' %}">
                         </a> 
                     </li> 
                     <li>
                         <a href="admin_perfil.html">
-                            <img src="assets/images/user.png">
+                            <img src="{% static 'images/user.png' %}">
                             <p>Perfil</p>
                         </a>
                     </li> 
                     <li> 
-                        <a href="admin_entrenar.html">
-                            <img src="assets/images/gym/gym.png">
+                        <a href="{% url 'entrenamiento:ejerciciosAdmin' %}">
+                            <img src="{% static 'images/gym/gym.png' %}">
                             <p>Entrenar</p>
                         </a> 
                     </li>
                     <li>
-                        <a href="admin_noticias.html">
-                            <img src="assets/images/edit.png">
+                        <a href="{% url 'posts:adminNoticia' %}">
+                            <img src="{% static 'images/edit.png' %}">
                             <p>Noticias</p>
                         </a>
                     </li>
                     <li>
-                        <a href="admin_turnos.html">
-                            <img src="assets/images/calendar.png">
+                        <a href="{% url 'personas:adminTurnos' %}">
+                            <img src="{% static 'images/calendar.png' %}">
                             <p>Turnos</p>
                         </a>
                     </li>
                     <li>
-                        <a href="admin_alumnos.html">
-                            <img src="assets/images/users-alt.png">
+                        <a href="{% url 'personas:adminAlumnos' %}">
+                            <img src="{% static 'images/users-alt.png' %}">
                             <p>Alumnos</p>
                         </a>
                     </li>
@@ -55,7 +56,7 @@
         <div class="navigation" id="navigation">
             <ul>
                 <li class="list">
-                    <a href="index_admin.html">
+                    <a href="{% url 'login_profe' %}">
                         <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
                         <span class="text">Inicio</span>
                     </a>
@@ -67,25 +68,25 @@
                     </a>
                 </li>
                 <li class="list">
-                    <a href="admin_entrenar.html">
+                    <a href="{% url 'entrenamiento:ejerciciosAdmin' %}">
                         <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
                         <span class="text">Entrenar</span>
                     </a>
                 </li>
                 <li class="list">
-                    <a href="admin_noticias.html">
+                    <a href="{% url 'posts:adminNoticia' %}">
                         <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
                         <span class="text">Noticias</span>
                     </a>
                 </li>
                 <li class="list">
-                    <a href="admin_turnos.html">
+                    <a href="{% url 'personas:adminTurnos' %}">
                         <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
                         <span class="text">Turnos</span>
                     </a>
                 </li>
                 <li class="list">
-                    <a href="admin_alumnos.html">
+                    <a href="{% url 'personas:adminAlumnos' %}">
                         <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
                         <span class="text">Alumnos</span>
                     </a>
