--- a/gymHouse/static/css/styles_admin-cambiarplanes.css
+++ b/gymHouse/static/css/styles_admin-cambiarplanes.css
@@ -135,6 +135,10 @@ body{
     flex-direction: column;
     padding: 2rem;
 }
+.pop-up--first.active
+{
+    display: none;
+}
 
 .pop-up--first > p{
     font-family: "raleway semibold";
@@ -255,6 +259,34 @@ body{
 ul{
     list-style: none;
 }
+.container_choices
+{
+    display: flex;
+    justify-content: space-around;
+}
+.container_choices > .choice
+{
+    text-align: center;
+    background: #FFFFFF;
+    border-radius: 18px;
+    font-family: "raleway medium";
+    font-size: 1.2rem;
+    color: rgb(0, 0, 0);
+    padding: 1.5rem;
+    cursor: pointer;
+}
+
+.container_choices > .choice > h3{
+    margin-top: .6rem;
+}
+
+.container_choices > input{
+    display: none;
+}
+.container_choices > input[type="radio"]:checked + label
+{
+    background-color: #5135FF;
+}
 
 .pop-up--first ul{
     display: flex;
@@ -332,38 +364,98 @@ ul{
     margin: auto;
 }
 /*Botones (siguiente - atras)------------------------------------*/
-.planmensual--pop-up_wrap button:first-of-type{
-    border-radius: 14px;
-    border: none;
-    background-color: #5135FF;
-    box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
-    margin: 2rem auto 1rem;
-    width: fit-content;
-}
-
-.planmensual--pop-up_wrap button:first-of-type p{
+.planmensual--pop-up_wrap #submit_button{
     text-decoration: none;
     font-family: "raleway semibold";
     font-size: 1.4rem;
     color: white;
     padding: 1rem 3rem;
     margin: auto;
+    border-radius: 14px;
+    border: none;
+    background-color: #5135FF;
+    cursor: pointer;
+    margin-top: 1.6rem;
+    margin-bottom: 1.3rem;
+}
+#first_secondbutton{
+
+    text-align: center;
+    text-decoration: none;
+    color: #000;
+    font-family: "raleway bold";
+    font-size: 1.2rem;
 }
 
-.planmensual--pop-up_wrap button:last-of-type{
+.planmensual--pop-up_wrap #first_button{
+    text-decoration: none;
+    font-family: "raleway semibold";
+    font-size: 1.4rem;
+    color: white;
+    padding: 1rem 3rem;
+    margin: auto;
+    border-radius: 14px;
+    border: none;
+    background-color: #5135FF;
+    cursor: pointer;
+    margin-top: 1.6rem;
+    margin-bottom: 1.3rem;
+}
+
+.planmensual--pop-up_wrap #second_button
+{
+    text-decoration: none;
+    font-family: "raleway semibold";
+    font-size: 1.4rem;
+    color: white;
+    padding: 1rem 3rem;
+    margin: auto;
+    border-radius: 14px;
+    border: none;
+    background-color: #5135FF;
+    cursor: pointer;
+    margin-top: 1.6rem;
+    margin-bottom: 1.3rem;
+}
+.container_buttons{
+    display: flex;
+    flex-flow: column;
+    width: 100%;
+    justify-content: center;
+    margin-top: auto;
+}
+
+#form_close{
+    background-color: transparent;
+    border: none;
+}
+
+.planmensual--pop-up_wrap #second_secondbutton
+{
+    text-align: center;
+    text-decoration: none;
+    color: #000;
+    font-family: "raleway bold";
+    font-size: 1.2rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+/* .planmensual--pop-up_wrap button:last-of-type{
     background: none;
     border: none;
     display: flex;
     margin: 0 auto 2rem;
-}
+} */
 
-.planmensual--pop-up_wrap button p{
+/* .planmensual--pop-up_wrap button p{
     text-decoration: none;
     font-family: "raleway semibold";
     font-size: 1.2rem;
     color: #000;
     text-decoration-line: underline;
-}
+} */
 
 /*--------------------------------------------------------------------*/
 /*Segundo cuadrito*/
@@ -372,8 +464,14 @@ ul{
     border-radius: 32px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     padding: 1.5rem;
+    height: 100%;   
+    /* display: none; */
+}
+.pop-up--second.active
+{
+    display: none;
 }
 
 .pop-up--second > p{
@@ -393,21 +491,55 @@ ul{
     border-radius: 18px;
     height: fit-content;
     width: fit-content;
+    overflow: hidden;
+    min-width: 7rem;
+    max-width: 7rem;
 }
+.day > select
+{
+    position: absolute;
+    z-index: -1;
+    pointer-events: none;
+    opacity: 0;
+}
+/* .day >.custom-num{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+} */
+.day >.custom-num > input[type="number"]
+{
+    /* background-color: red; */
+    width: 2rem;
+    height: 4rem;
+    border: none;
+    text-align: center;
+    outline: none;
+}
+
+.day >.custom-num > input[type="number"]::-webkit-inner-spin-button, 
+.day >.custom-num > input[type="number"]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { -moz-appearance:textfield; }
 
 .day > p{
     font-family: "raleway semibold";
     font-size: 1.4rem;
     color: rgb(0, 0, 0);
     padding: 1rem 2rem;
+    text-align: center;
+    cursor: pointer;
 }
 
-.selection p:first-of-type{
+/* .selection p:first-of-type{
     margin-top: 1rem;
-}
+} */
 /*dias seleccionados*/
 
-.selection{
+/* .selection{
     background: #ADABFF;
     border: 3px solid #8976FF;
     border-radius: 18px;
@@ -417,15 +549,35 @@ ul{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-}
+} */
 
 /*horario*/
-.custom-num {
+.day> .custom-num{
+    display: none;
+}
+
+#form_add_days
+{
+    min-height: 26rem;
+    height: 26rem;
+}
+.day.select{
+    background: #ADABFF;
+    border: 3px solid #8976FF;
+}
+
+.day.select > .custom-num.select {
     display: flex;
-    width: 90%;
-    border-radius : 3em;
+    /* width: 90%; */
+    /* border-radius: 3em; */
+    background: #ADABFF;
     transition: 1s;
-    background-color: #fff;
+    align-items: center;
+    
+    justify-content: center;
+}
+.day.select > .custom-num.select >input{
+    background: #ADABFF;
 }
 
 .custom-num i{
@@ -461,8 +613,8 @@ ul{
     background:none;
     border:none;
     color:#000;
-    width: 100%;
-    padding: 0 1rem 1rem 1rem;
+    
+   
 }
 
 /*----------------------------------------------------------------------*/
@@ -475,6 +627,11 @@ ul{
     justify-content: space-between;
     align-items: center;
     padding: 2rem 3rem;
+    display: none;
+}
+.pop-up--third.active
+{
+    display: block;
 }
 
 .pop-up--third h5{
