--- a/gymHouse/posts/templates/admin_noticias-crear.html
+++ b/gymHouse/posts/templates/admin_noticias-crear.html
@@ -1,95 +1,76 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="es">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="header" content="" />
-        <link rel="stylesheet" href="{% static 'css/styles_menu.css' %}" />
-        <link rel="stylesheet" href="{% static 'css/styles_menu-celu.css' %}">
-        <link rel="stylesheet" href="{% static 'css/styles_admin_noticias-noticia.css' %}">
-        <link rel="stylesheet" href="{% static 'css/styles_admin_noticias-crear.css' %}" />
+        <link rel="stylesheet" href="assets/styles_menu.css" />
+        <link rel="stylesheet" href="assets/styles_menu-celu.css">
+        <link rel="stylesheet" href="assets/styles_admin_noticias-crear.css" />
         <title>Admin: Noticias - crear noticia</title>
     
     </head>
     <body>
-        <nav class="menu">
-            <div class="menu_icons">
-                <ul> <!-- poner los links correctos -->
-                    <li>
-                        <a href="{% url 'login_profe' %}">
-                            <img class="logo" src="{% static 'images/logo.png' %}">
-                        </a> 
-                    </li> 
-                    <li>
-                        <a href="admin_perfil.html">
-                            <img src="{% static 'images/user.png' %}">
-                            <p>Perfil</p>
-                        </a>
-                    </li> 
-                    <li> 
-                        <a href="{% url 'entrenamiento:ejerciciosAdmin' %}">
-                            <img src="{% static 'images/gym/gym.png' %}">
-                            <p>Entrenar</p>
-                        </a> 
-                    </li>
-                    <li>
-                        <a href="{% url 'posts:adminNoticia' %}">
-                            <img src="{% static 'images/edit.png' %}">
-                            <p>Noticias</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{% url 'personas:adminTurnos' %}">
-                            <img src="{% static 'images/calendar.png' %}">
-                            <p>Turnos</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{% url 'personas:adminAlumnos' %}">
-                            <img src="{% static 'images/users-alt.png' %}">
-                            <p>Alumnos</p>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <div class="wrapper_menu">
+            <nav class="menu">
+                <div class="menu_icons">
+                    <ul> <!-- poner los links correctos -->
+                        <li>
+                            <a href="#"> <img class="logo" src="assets/images/logo.png"> </a> 
+                        </li> 
+                        <li>
+                            <a href="#"> <img src="assets/images/user.png"> <p>Cuenta</p> </a>
+                        </li> 
+                        <li> 
+                            <a href="admin_entrenar.html">
+                                <img src="assets/images/gym/gym.png">
+                                <p>Entrenar</p>
+                            </a> 
+                        </li>
+                        <li>
+                            <a href="#"> <img src="assets/images/edit.png"> <p>Noticias</p> </a>
+                        </li>
+                        <li>
+                            <a href="#"> <img src="assets/images/calendar.png"> <p>Turnos</p> </a>
+                        </li>
+                        <li>
+                            <a href="#"> <img src="assets/images/users-alt.png"> <p>Alumnos</p> </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <aside class="container_nav"></aside>
+        </div>
         <div class="navigation" id="navigation">
             <ul>
                 <li class="list">
-                    <a href="{% url 'login_profe' %}">
+                    <a href="index_alumnos.html">
                         <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
                         <span class="text">Inicio</span>
                     </a>
                 </li>
                 <li class="list active">
-                    <a href="admin_perfil.html">
+                    <a href="alumnos_perfil.html">
                         <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
                         <span class="text">Perfil</span>
                     </a>
                 </li>
                 <li class="list">
-                    <a href="{% url 'entrenamiento:ejerciciosAdmin' %}">
+                    <a href="alumnos_entrenar.html">
                         <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
                         <span class="text">Entrenar</span>
                     </a>
                 </li>
                 <li class="list">
-                    <a href="{% url 'posts:adminNoticia' %}">
+                    <a href="alumnos_noticias.html">
                         <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
                         <span class="text">Noticias</span>
                     </a>
                 </li>
                 <li class="list">
-                    <a href="{% url 'personas:adminTurnos' %}">
+                    <a href="alumnos_turnos.html">
                         <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
                         <span class="text">Turnos</span>
-                    </a>
-                </li>
-                <li class="list">
-                    <a href="{% url 'personas:adminAlumnos' %}">
-                        <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
-                        <span class="text">Alumnos</span>
                     </a>
                 </li>
                 <div class="indicator"></div>
@@ -101,18 +82,18 @@
         <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-        <!-- <script> document.getElementById("eprofile").style.display='none'; </script> -->
-    
+        <script> document.getElementById("eprofile").style.display='none'; </script>
+        
         <!-- fin del menú -->
 
         <div class="wrapper_noticias">
             <div class="noticias-crearnoticia">
                 
-                <a class="turnback" href="admin_noticias.html">
+                <a class="turnback" src=""><!--agregar link-->
                     <img src="assets/images/turn-back.png">
                 </a>
     
-                <form action="" class="noticia">
+                <form action="" class="crearnoticia">
                     <div class="imagen">
                         <div class="imagen-subir">
                             <label for="myfile"><p>insertar imagen</p></label>
@@ -145,6 +126,13 @@
                                 <img src="assets/images/text format/numeral list.png">
                             </button>
                         </div>
+                        <!-- <div class="formato-color">
+                            <button id="rosa"></button>
+                            <button id="amarillo"></button>
+                            <button id="azul"></button>
+                            <button id="verde"></button>
+                            <button id="naranja"></button>
+                        </div> -->
                     </div>
                 </form>
                 
@@ -158,7 +146,7 @@
                 </button>
             </div>
         </div>
-        <div class="espaciofinal"></div>
+
 
     </body>
 </html>
