--- a/gymHouse/posts/templates/admin_noticias-noticiacompleta_ailin.html
+++ b/gymHouse/posts/templates/admin_noticias-noticiacompleta_ailin.html
@@ -116,7 +116,7 @@
             </div>
             <div class="texto">
                 <div class="texto-titulo">
-                    <h3>Beneficios del estiramiento</h3>
+                    <h3>{{post.titulo}}</h3>
                 </div>
                 <div class="texto-contenido">
                     <p>
